Fix for Firefox
* Fixed print preview messed up on Firefox
* Fixed line breaking behavior not properly working inside <pre>

--- a/memodump/css/memodump.css
+++ b/memodump/css/memodump.css
@@ -697,6 +697,7 @@ table > tfoot > tr.danger > th {
 /* misc */
 pre {
     overflow: visible;
+    white-space: pre-wrap;
 }
 
 /*=========================================================
@@ -806,7 +807,7 @@ pre {
 }
 
 /*=========================================================
-   print view
+   print preview
 ===========================================================*/
 
 @media print {
@@ -827,6 +828,9 @@ pre {
         left: 0;
         padding: 0;
         margin: 0;
+    }
+    #contentbox {
+        display: block; /* to fix Firefox print preview */
     }
     a[href]:after { /* to stop printing anchor destinations in print mode */
         content: "";
